<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VocabMainActivity">

    <Button
        android:id="@+id/btnVocab4"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:text="@string/btnVocab4"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btnVocab1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVocab" />

    <Button
        android:id="@+id/btnVocab1"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:text="@string/btnVocab1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVocab2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVocab4" />

    <Button
        android:id="@+id/btnVocab2"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:text="@string/btnVocab2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVocab3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVocab1" />

    <Button
        android:id="@+id/btnVocab3"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btnVocab3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVocab2" />

    <TextView
        android:id="@+id/tvVocab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tvVocab"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVocab4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>