<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordsMainActivity">

    <Button
        android:id="@+id/btnWords1"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:text="@string/btnWords1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnWords2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWords" />

    <Button
        android:id="@+id/btnWords2"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:text="@string/btnWords2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnWords3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWords1" />

    <Button
        android:id="@+id/btnWords3"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btnWords3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWords2" />

    <TextView
        android:id="@+id/tvWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tvWords"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btnWords1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:entries="@array/Parts"/>

</androidx.constraintlayout.widget.ConstraintLayout>