<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnWords"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/btnWords"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVocab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVocab"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:text="@string/btnVocab"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWords" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btnExit"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVocab" />
</androidx.constraintlayout.widget.ConstraintLayout>